[package]
authors = ["zuisong"]
description = "A rust version of fortune"
edition = "2021"
name = "rs-fortune"
version = "0.8.0"

[dependencies]
clap = {version = "4.5.0", features = ["derive", "env"]}
clap_complete = "4.5.0"
fastrand = "2.2.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1 
lto = true 
opt-level = "z" # Optimize for size.
panic = "abort" 
strip = true 

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
