[package]
description = "A rust version of fortune"
edition = "2024"
name = "rs-fortune"
version = "0.9.0"
rust-version = "1.90"

[dependencies]
clap = {version = "4.5.0", default-features = false, features = ["derive", "env", "help", "std", "suggestions"]}
clap_complete = "4.5.0"
fastrand = "2.3.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1 
lto = true 
opt-level = "z" # Optimize for size.
panic = "abort" 
strip = true 

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.16.0"
